// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders 1`] = `
.c2 {
  pointer-events: none;
  position: absolute;
  top: 45%;
  right: 15px;
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 8.6px solid #495057;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  background-color: #e9ecef;
  border-radius: 2em;
  font-size: 16px;
  padding: 10px 40px 10px 15px;
  cursor: pointer;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  class="c0"
>
  <select
    class="c1"
  />
  <span
    class="c2"
  />
</div>
`;

exports[`Select renders with children 1`] = `
.c2 {
  pointer-events: none;
  position: absolute;
  top: 45%;
  right: 15px;
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 8.6px solid #495057;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  background-color: #e9ecef;
  border-radius: 2em;
  font-size: 16px;
  padding: 10px 40px 10px 15px;
  cursor: pointer;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  class="c0"
>
  <select
    class="c1"
  >
    <option
      value="1"
    >
      One
    </option>
    <option
      value="2"
    >
      Two
    </option>
  </select>
  <span
    class="c2"
  />
</div>
`;
